# shower-games

./: .gitignore  pyproject.toml  requirements.txt  sample-env.json  schema.json  vercel.json
game_query/: __init__.py  app.py
game_query/lib/: jackett.py  prowlarr.py  rawg.py
game_query/routes/: rawg.py
game_query/scrapper/: tests.py
